# EmuEEPROM

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
include/EmuEEPROM/: EmuEEPROM.h
include/lib/emueeprom/: common.h  emueeprom.h
src/: EmuEEPROM.cpp  EmuEEPROM.h  Makefile  Sources.mk  emueeprom.cpp
src/lib/: EmuEEPROM.cpp
tests/: CMakeLists.txt  Defines.mk  Makefile  Sources.mk
tests/framework/: CMakeLists.txt
tests/framework/src/: Framework.cpp
tests/src/: CMakeLists.txt  EmuEEPROMConfig.h
tests/src/all/: Makefile  tests.cpp
tests/src/test/: CMakeLists.txt  test.cpp
